# Learning-QT

./: .gitignore
BingDesk_QT/: CMakeLists.txt  Main.qml  main.cpp  wallpapermanager.cpp  wallpapermanager.h
EXAMPLE00/UntitledProject/: UntitledProject.qmlproject  UntitledProject.qmlproject.qtds
FireParticles/: CMakeLists.txt  FireParticles.qmlproject  FireParticles.qmlproject.qtds  qmlmodules
FireParticles/content/: App.qml  Screen01.ui.qml
FireParticles/imports/: CMakeLists.txt
FireParticles/src/: import_qml_plugins.h
Loginui1/: CMakeLists.txt  Loginui1.qmlproject  Loginui1.qmlproject.qtds  qmlmodules
Loginui1/content/: App.qml  EntryField.ui.qml  PushButton.ui.qml  Screen01.ui.qml
QGoodWindow/: CHANGELOG.md  LICENSE.md  QGoodCentralWidget.md  QGoodWindow.md  README.md
Serial Port Example/Serial_Port_Example/: Serial_Port_Example.pro.user.408cc90
SideMenu/: SideMenu.qmlproject.qtds  qmlmodules
SideMenu/content/: CustomButton.ui.qml  Screen01.ui.qml
SideMenu/src/: import_qml_plugins.h
calculatorbuilder/: calculatorform.cpp  calculatorform.h  calculatorform.ui
extending-qml/chapter1-basics/: main.qml  piechart.cpp  piechart.h
extending-qml/chapter2-methods/: chapter1-basics.pro  main.qml  piechart.cpp  piechart.h
hidUsbTest/: colormaker.cpp  colormaker.h  hidUsbTest.pro  hidUsbTest.pro.user.408cc90  kj_usb.cpp  kj_usb.h  main.cpp  main.qml
model-view/: ModelView.pro  mycolorseldelegate.cpp  mycolorseldelegate.h  mytablemodel.cpp  mytablemodel.h  widget.cpp  widget.ui
qtWidgetExam/: mainwindow.ui
(+121 files in other folders)
